# bevy-2048

./: Cargo.toml  README.md
assets/: bevy - 2048 - demo1.webm
src/: lib.rs  main.rs
tests/: main.rs
